Upload utils, python files, and requirements

--- a/Attribution_results.ipynb
+++ b/Attribution_results.ipynb
@@ -47,8 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from attribution_utils import IGDataset,extract_seq,get_motif,mat_product\n",
-    "from utils import hot_encode_sequence"
+    "from src.attribution_utils import IGDataset,extract_seq,get_motif,mat_product\n",
+    "from src.utils import hot_encode_sequence"
    ]
   },
   {
