--- a/DATA description.ipynb
+++ b/DATA description.ipynb
@@ -10,8 +10,8 @@
     "import torch\n",
     "import seaborn as sns\n",
     "sns.set(font_scale=1.8)\n",
-    "from utils import count_ambig_bps_in_sequence\n",
-    "from dataset_utils import DatasetLoad"
+    "from src.utils import count_ambig_bps_in_sequence\n",
+    "from src.dataset_utils import DatasetLoad"
    ]
   },
   {
